# licensor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  test.yml
licenses/: LicenseRef-ACAB-1.0  LicenseRef-FPL  LicenseRef-OGL-1.0a
src/: main.rs
