[package]
name = "licensor"
version = "1.1.0"
authors = ["Sean Clayton <sean@seanclayton.me>"]
edition = "2018"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
license = "1.1.8"

[dev-dependencies]
cargo-watch = "7.8.0"
